# simple-backup

./: .gitignore  Cargo.toml  README.md
doc/: normalization ut.md
env/: test.xml
env/config/: appContext.xml  conf-mac.yml  conf-real.yml  conf.yml  dudu.txt_not_replaced  test.properties  toto.yml
env/data/: dummy.yml
env/data/folder-2/: 片仮名.txt
src/: config.rs  main-old.rs  main.rs
tests/: test_serde.rs
