[package]
name = "simple-backup"
version = "0.9.0"
authors = [ "Denis Papin <doka@doka.live>" ]
edition = "2018"

[dependencies.dtoa]
version = "0.4"

[dependencies.linked-hash-map]
version = "0.5"

#[dependencies.serde]
#version = "1.0.60"

[dependencies.yaml-rust]
version = "0.4"

#[dev-dependencies.serde_derive]
#version = "1.0"

[dev-dependencies.unindent]
version = "0.1"


[dependencies]
walkdir = "2.3.1"
chrono = "0.4.10"
serde = { version = "1.0.60", features = ["derive"] }
serde_yaml = "0.8.11"